Usepackage Environment Manager
Copyright (C) 1995-2002  Jonathan Hogg  <jonathan@onegoodidea.com>
.  
This program is free software; you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation; either version 2 of the License, or
(at your option) any later version.
.
This program is distributed in the hope that it will be useful, 
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.
.
You should have received a copy of the GNU General Public License
along with this program; if not, write to the Free Software 
Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA

2002-06-17  Jonathan Hogg  <jonathan@onegoodidea.com>

	* README, usepackage.c: Fixed dumb "Copyright Copyright" cosmetic 
	bug.

	* usepackage.conf: tidied this up a little.

	* Updated copyright and license stuff to latest versions from FSF.

2002-05-29  Jonathan Hogg  <jonathan@onegoodidea.com>

	* Tagged version 1.6.1 for release.

	* Makefile.am: removed pattern matching dependency line for .in
	files and replaced it with explicit rules. The pattern matching
	line doesn't work with BSD make and it's been so long since I used
	anything but GNU make I can't remember how to do the equivalent.

2002-05-27  Jonathan Hogg  <jonathan@onegoodidea.com>

	* README: Updated to be less Glasgow-centric and match the new
	build style.

	* INSTALL: Short basic installation instructions.

	* Makefile.am: Added custom install procedure for usepackage.conf
	file.

	* Updated copyright and author notices on everything.

2002-05-26  Jonathan Hogg  <jonathan@onegoodidea.com>

	* Makefile.am, configure.ac: Now using autoconf/automake to
	generate all of the build system.

	* usepackage.c: Small changes to the messages.

	* scanner.l, grammar.y: Patch from Luca Filipozzi to improve
	portability.
